# goat

./: .gitignore  Cargo.toml  LICENSE  README.md
custom_stages/: example_stage.lua
example/: config.lua  config.star  packages.lua
from_lua_file_macro/: Cargo.toml
from_lua_file_macro/src/: lib.rs
goat_lua/: Cargo.toml
goat_lua/src/: lib.rs
goat_lua_macro/: Cargo.toml  README.md
goat_lua_macro/src/: lib.rs
package_managers/: pacman.lua  pacman.star  paru.lua
service_managers/: systemd.lua
src/: cache.rs  config.rs  from_file.rs  goat.rs  goat_lua.rs  main.rs  package_manager.rs  service_manager.rs  stage.rs  starlark_goat.rs  sync.rs
test_cache/: cache.json
