[package]
name = "goat"
version = "0.1.0"
edition = "2024"

[dependencies]
# logging
log = "0.4.27"
env_logger = "0.11.8"
# lua
mlua = { version = "0.11.1", features = ["lua54"] }
# json stuff
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
# unistd which port for rust
which = "8.0.0"
