[package]
name = "goat"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# logging
log = "0.4.27"
env_logger = "0.11.8"
# lua
mlua = { version = "0.11.1", features = ["lua54"] }
# json stuff
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
# linux stuff
which = "8.0.0"
nix = { version = "0.30.1", features = ["user"] }
# other
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
regex = "1.11.1"

from_lua_file_macro = { path = "from_lua_file_macro" }